--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             --slogan-bg-color: var(--footer-bg-color); /* Được thay đổi để giống footer */
             --slogan-padding: 20px;
             --slogan-border-radius: 15px;
-            --slogan-font-size: 1.8em;
+            --slogan-font-size: 1.8em; /* Fixed font size */
             --slogan-transition: opacity 1s ease-in-out;
             --footer-bg-color: #007bff; /* Màu nền footer xanh */
             --footer-text-color: #ffffff; /* Màu chữ footer trắng */
@@ -49,6 +49,10 @@
             --card-hover-bg: #e9ecef; /* Màu nền khi hover card */
             --card-hover-transform: translateY(-5px);
             --card-transition: transform 0.3s ease, background-color 0.3s ease;
+            --section-title-bg: #007bff; /* Màu nền cho tiêu đề các phần */
+            --section-title-color: #ffffff; /* Màu chữ cho tiêu đề các phần */
+            --section-title-padding: 10px 20px;
+            --section-title-border-radius: 8px 8px 0 0;
         }
 
         /* Reset CSS */
@@ -66,6 +70,21 @@
             align-items: center;
             padding: 20px;
             min-height: 100vh;
+        }
+
+        /* Phần Tiêu Đề Các Phần */
+        .section-title {
+            width: 100%;
+            max-width: 800px;
+            background-color: var(--section-title-bg);
+            color: var(--section-title-color);
+            padding: var(--section-title-padding);
+            border-radius: var(--section-title-border-radius);
+            margin-bottom: 10px;
+            text-align: center;
+            font-size: 1.5em;
+            font-family: var(--qa-question-font);
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
         }
 
         /* Phần 1: Khẩu Hiệu */
@@ -91,6 +110,8 @@
             transition: var(--slogan-transition);
             text-align: center;
             word-wrap: break-word;
+            font-weight: normal; /* Không in đậm */
+            white-space: nowrap; /* Không tự động co giãn */
         }
 
         .slogan-section.active #slogan {
@@ -117,6 +138,7 @@
             margin-bottom: 20px;
             font-size: 2em;
             text-align: center;
+            font-family: var(--qa-question-font);
         }
 
         .video-container {
@@ -238,10 +260,15 @@
 
             #slogan {
                 font-size: 1.2em; /* Giảm kích thước font trên thiết bị nhỏ */
+                white-space: normal; /* Cho phép xuống dòng */
             }
 
             .slogan-section {
                 padding: 15px;
+            }
+
+            .section-title {
+                font-size: 1.2em;
             }
         }
 
@@ -326,7 +353,50 @@
             justify-content: center;
         }
 
-        /* Phần 3: Hỏi Đáp */
+        /* Phần 3: Tìm hiểu */
+        .learning-section {
+            width: 100%;
+            max-width: 800px;
+            background-color: var(--learning-bg-color);
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+            padding: 20px;
+            margin-bottom: 30px;
+        }
+
+        .learning-section h2 {
+            text-align: center;
+            color: var(--dark-color);
+            margin-bottom: 20px;
+            font-size: 1.8em;
+            font-family: var(--qa-question-font);
+        }
+
+        .learning-items {
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+            width: 100%;
+        }
+
+        .learning-item {
+            background-color: var(--card-bg-color);
+            border: 1px solid var(--card-border-color);
+            border-radius: 8px;
+            padding: 15px;
+            text-align: center;
+            cursor: pointer;
+            transition: var(--card-transition);
+            font-family: var(--qa-answer-font);
+            color: var(--text-color);
+        }
+
+        .learning-item:hover {
+            background-color: var(--accordion-hover);
+            transform: var(--card-hover-transform);
+        }
+
+        /* Phần 4: Hỏi Đáp */
         .qa-section {
             width: 100%;
             max-width: 800px;
@@ -417,49 +487,6 @@
             line-height: 1.6;
         }
 
-        /* Phần 4: Tìm hiểu */
-        .learning-section {
-            width: 100%;
-            max-width: 800px;
-            background-color: var(--learning-bg-color);
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-            padding: 20px;
-            margin-bottom: 30px;
-        }
-
-        .learning-section h2 {
-            text-align: center;
-            color: var(--dark-color);
-            margin-bottom: 20px;
-            font-size: 1.8em;
-            font-family: var(--qa-question-font);
-        }
-
-        .learning-items {
-            display: flex;
-            flex-direction: column;
-            gap: 15px;
-            width: 100%;
-        }
-
-        .learning-item {
-            background-color: var(--card-bg-color);
-            border: 1px solid var(--card-border-color);
-            border-radius: 8px;
-            padding: 15px;
-            text-align: center;
-            cursor: pointer;
-            transition: var(--card-transition);
-            font-family: var(--qa-answer-font);
-            color: var(--text-color);
-        }
-
-        .learning-item:hover {
-            background-color: var(--accordion-hover);
-            transform: var(--card-hover-transform);
-        }
-
         /* Modal Styles */
         .modal {
             display: none; /* Hidden by default */
@@ -533,7 +560,50 @@
             color: var(--error-color);
         }
 
-        /* Phần 5: Footer */
+        /* Phần 5: Tìm hiểu */
+        .learning-section {
+            width: 100%;
+            max-width: 800px;
+            background-color: var(--learning-bg-color);
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+            padding: 20px;
+            margin-bottom: 30px;
+        }
+
+        .learning-section h2 {
+            text-align: center;
+            color: var(--dark-color);
+            margin-bottom: 20px;
+            font-size: 1.8em;
+            font-family: var(--qa-question-font);
+        }
+
+        .learning-items {
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+            width: 100%;
+        }
+
+        .learning-item {
+            background-color: var(--card-bg-color);
+            border: 1px solid var(--card-border-color);
+            border-radius: 8px;
+            padding: 15px;
+            text-align: center;
+            cursor: pointer;
+            transition: var(--card-transition);
+            font-family: var(--qa-answer-font);
+            color: var(--text-color);
+        }
+
+        .learning-item:hover {
+            background-color: var(--accordion-hover);
+            transform: var(--card-hover-transform);
+        }
+
+        /* Phần 6: Footer */
         .footer {
             width: 100%;
             text-align: center;
@@ -561,9 +631,28 @@
         <p id="slogan"></p>
     </div>
 
-    <!-- Phần 2: Nhận Diện Biển Báo Giao Thông -->
+    <!-- Phần 2: Tìm hiểu -->
+    <div class="learning-section">
+        <h2>Tìm hiểu</h2>
+        <div class="learning-items">
+            <div class="learning-item" onclick="window.open('https://sites.google.com/view/luatgiaothong', '_blank')" tabindex="0" role="button" aria-label="Tìm hiểu luật giao thông cho học sinh">
+                1. Tìm hiểu luật giao thông cho học sinh
+            </div>
+            <div class="learning-item" onclick="window.open('https://sites.google.com/view/hanhvigiaothong', '_blank')" tabindex="0" role="button" aria-label="Tìm hiểu về những hành vi học sinh không được làm khi tham gia giao thông">
+                2. Tìm hiểu về những hành vi học sinh không được làm khi tham gia giao thông
+            </div>
+            <div class="learning-item" onclick="window.open('https://sites.google.com/view/tinhhuongthucte', '_blank')" tabindex="0" role="button" aria-label="Tìm hiểu về những tình huống thực tế">
+                3. Tìm hiểu về những tình huống thực tế
+            </div>
+            <div class="learning-item" onclick="window.open('https://sites.google.com/view/tracnghiemgiaothong', '_blank')" tabindex="0" role="button" aria-label="Làm các bài trắc nghiệm về giao thông">
+                4. Làm các bài trắc nghiệm về giao thông
+            </div>
+        </div>
+    </div>
+
+    <!-- Phần 3: Nhận Diện Biển Báo Giao Thông -->
     <div class="recognition-section">
-        <h1>Nhận Diện Biển Báo Giao Thông</h1>
+        <div class="section-title">Nhận Diện Biển Báo Giao Thông</div>
         <div class="video-container">
             <video id="video" autoplay playsinline aria-label="Video từ camera"></video>
             <div class="overlay"></div>
@@ -600,8 +689,9 @@
         </div>
     </div>
 
-    <!-- Phần 3: Hỏi Đáp (QA) -->
+    <!-- Phần 4: Hỏi Đáp (QA) -->
     <div class="qa-section">
+        <div class="section-title">Hỏi Đáp</div>
         <h2>Hỏi Đáp</h2>
 
         <!-- Câu hỏi 1 -->
@@ -646,25 +736,6 @@
                 <li>Sử dụng đèn xi-nhan khi rẽ để thông báo cho các phương tiện khác.</li>
                 <li>Tránh di chuyển khi đèn chuyển đổi để đảm bảo an toàn.</li>
             </ul>
-        </div>
-    </div>
-
-    <!-- Phần 4: Tìm hiểu -->
-    <div class="learning-section">
-        <h2>Tìm hiểu</h2>
-        <div class="learning-items">
-            <div class="learning-item" onclick="window.open('https://sites.google.com/view/luatgiaothong', '_blank')" tabindex="0" role="button" aria-label="Tìm hiểu luật giao thông cho học sinh">
-                1. Tìm hiểu luật giao thông cho học sinh
-            </div>
-            <div class="learning-item" onclick="window.open('https://sites.google.com/view/hanhvigiaothong', '_blank')" tabindex="0" role="button" aria-label="Tìm hiểu về những hành vi học sinh không được làm khi tham gia giao thông">
-                2. Tìm hiểu về những hành vi học sinh không được làm khi tham gia giao thông
-            </div>
-            <div class="learning-item" onclick="window.open('https://sites.google.com/view/tinhhuongthucte', '_blank')" tabindex="0" role="button" aria-label="Tìm hiểu về những tình huống thực tế">
-                3. Tìm hiểu về những tình huống thực tế
-            </div>
-            <div class="learning-item" onclick="window.open('https://sites.google.com/view/tracnghiemgiaothong', '_blank')" tabindex="0" role="button" aria-label="Làm các bài trắc nghiệm về giao thông">
-                4. Làm các bài trắc nghiệm về giao thông
-            </div>
         </div>
     </div>
 
