--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             --dark-color: #333;
             --light-bg: #f0f4f8;
             --white-bg: #fff;
-            --text-color: #ffffff; /* Đổi từ #555 thành trắng */
+            --text-color: #654321; /* Đổi từ #ffffff thành màu nâu đậm */
             --error-color: #d9534f;
             --disabled-color: #cccccc;
             --focus-outline: #ffbf47;
@@ -26,7 +26,7 @@
             --accordion-active: #ced4da;
             --qa-question-font: 'Roboto', sans-serif;
             --qa-answer-font: 'Open Sans', sans-serif;
-            --question-color: #ffffff; /* Đổi từ #2c3e50 thành trắng */
+            --question-color: #654321; /* Đổi từ #ffffff thành màu nâu đậm */
             --slogan-font: 'Roboto', sans-serif;
             --slogan-color: #ffffff;
             --slogan-bg-color: var(--footer-bg-color); /* Được thay đổi để giống footer */
@@ -50,7 +50,7 @@
             --card-hover-transform: translateY(-5px);
             --card-transition: transform 0.3s ease, background-color 0.3s ease;
             --section-title-bg: #007bff; /* Màu nền cho tiêu đề các phần */
-            --section-title-color: #ffffff; /* Màu chữ cho tiêu đề các phần */
+            --section-title-color: #654321; /* Đổi từ #ffffff thành màu nâu đậm */
             --section-title-padding: 10px 20px;
             --section-title-border-radius: 8px 8px 0 0;
             --fixed-slogan-width: 100%; /* Cố định chiều rộng 100% */
@@ -438,7 +438,7 @@
         }
 
         .qa-section h2 {
-            color: var(--dark-color);
+            color: var(--section-title-color);
             margin-bottom: 20px;
             font-size: 1.8em; /* Giảm kích thước font chữ */
             text-align: center;
